<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/s_create_field" style="@style/TextStyle_Title"/>
    <EditText android:id="@+id/editFieldName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/s_enter_field_name" android:maxLines="1" android:inputType="textNoSuggestions" android:imeOptions="actionNext"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
        <TextView android:textStyle="bold" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/s_default_value" android:layout_weight="1"/>
        <TextView android:textStyle="bold" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/s_data_type" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:id="@+id/editDefaultValue" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginRight="5dp" android:layout_weight="1" android:layout_marginEnd="5dp"/>
        <androidx.appcompat.widget.AppCompatSpinner android:id="@+id/comboDataType" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginLeft="5dp" android:layout_weight="1" android:layout_marginStart="5dp"/>
        <EditText android:id="@+id/editCustomDataType" android:visibility="gone" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginLeft="5dp" android:layout_weight="1" android:layout_marginStart="5dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat android:id="@+id/PK" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/s_pk" android:layout_weight="1"/>
        <androidx.appcompat.widget.SwitchCompat android:id="@+id/allowNull" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:checked="true" android:text="@string/s_allow_null" android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <Button android:textColor="@color/colorPrimary" android:id="@+id/btnAdd" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/s_add_field" android:layout_alignParentRight="true"/>
        <Button android:id="@+id/btnCancel" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/s_cancel" android:layout_toLeftOf="@+id/btnAdd"/>
    </RelativeLayout>
</LinearLayout>
