<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/app_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
    <Button android:id="@+id/btnCreateDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/s_create_db"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/btnOpenDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrir_db"
        android:layout_above="@+id/btnCreateDb"
        android:layout_alignLeft="@+id/btnCreateDb"
        android:layout_alignRight="@+id/btnCreateDb"/>
    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/s_exit"
        android:layout_below="@+id/btnCreateDb"
        android:layout_alignLeft="@+id/btnCreateDb"
        android:layout_alignRight="@+id/btnCreateDb"/>
    <TextView android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="1dp"
        android:text="@string/app_version"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignBottom="@+id/textView"/>
</RelativeLayout>