<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/blueGrey50" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/actionBar" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar"/>
    <RelativeLayout android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/actionBar">
        <TextView android:textStyle="bold" android:id="@+id/labelTableName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:text="@string/s_table_name_indicator"/>
        <androidx.cardview.widget.CardView android:id="@+id/cardTableName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_below="@+id/labelTableName" app:contentPadding="15dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/editTableName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/s_enter_table_name"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView android:textStyle="bold" android:id="@+id/labelFields" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="10dp" android:text="@string/s_fields_indicator" android:layout_below="@+id/cardTableName"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/fieldsList" android:padding="2dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="5dp" android:layout_below="@+id/labelFields"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/btnAddField" android:background="@color/colorAccent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add_white_24dp" android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>
